<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		daily_tasks
	 *	@date 		Friday 11th of November 2022 02:34:01 AM
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/daily_tasks" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >



			<RelativeLayout android:id="@+id/page_daily_tasks_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View   android:id="@+id/_bg__daily_tasks_ek2"
					android:background="@drawable/_bg__daily_tasks_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="390dp"
					android:layout_height="844dp" />

				<ImageView android:id="@+id/vector_1"
					android:src="@drawable/vector_1"
					android:contentDescription="vector_1"
					 android:layout_marginStart="-19dp"
					android:layout_marginTop="-10dp"
					android:layout_width="441dp"
					android:layout_height="338dp" />

				<TextView android:id="@+id/let_s_see_what_kind_of_quests_we_can_tackle_today__i_m_sure_you_ll_do_your_best_"
					android:fontFamily="Nunito"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="20sp"
					android:textColor="@color/let_s_see_what_kind_of_quests_we_can_tackle_today__i_m_sure_you_ll_do_your_best__color"
					android:layout_marginLeft="-87dp"
					android:layout_marginTop="234dp"
					android:layout_width="574dp"
					android:layout_height="98dp"
					android:text="@string/let_s_see_what_kind_of_quests_we_can_tackle_today__i_m_sure_you_ll_do_your_best__string"
					 />

				<View   android:id="@+id/rectangle_2"
					android:background="@drawable/rectangle_7_shape"
					 android:layout_marginStart="49dp"
					android:layout_marginTop="384dp"
					android:layout_width="292dp"
					android:layout_height="96dp" />

				<View   android:id="@+id/rectangle_4"
					android:background="@drawable/rectangle_5_shape"
					 android:layout_marginStart="49dp"
					android:layout_marginTop="554dp"
					android:layout_width="292dp"
					android:layout_height="96dp" />

				<TextView android:id="@+id/score__20"
					android:fontFamily="Nunito"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/score__20_color"
					android:layout_marginLeft="158dp"
					android:layout_marginTop="617dp"
					android:layout_width="81dp"
					android:layout_height="33dp"
					android:text="@string/score__20_string"
					 />

				<View   android:id="@+id/rectangle_3"
					android:background="@drawable/rectangle_6_shape"
					 android:layout_marginStart="49dp"
					android:layout_marginTop="720dp"
					android:layout_width="292dp"
					android:layout_height="96dp" />

				<TextView android:id="@+id/quest_1"
					android:fontFamily="Nunito"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="36sp"
					android:shadowRadius="4"
					android:shadowColor="#000000"
					android:shadowDx="0"
					android:shadowDy="4"
					android:textColor="@color/score__20_color"
					android:layout_marginLeft="113dp"
					android:layout_marginTop="384dp"
					android:layout_width="175dp"
					android:layout_height="50dp"
					android:text="@string/quest_1_string"
					 />

				<ImageView android:id="@+id/star_1"
					android:src="@drawable/star_1"
					android:contentDescription="star_1"
					 android:layout_marginStart="271dp"
					android:layout_marginTop="393dp"
					android:layout_width="27dp"
					android:layout_height="27dp" />

				<ImageView android:id="@+id/star_2"
					android:src="@drawable/star_2"
					android:contentDescription="star_2"
					 android:layout_marginStart="271dp"
					android:layout_marginTop="561dp"
					android:layout_width="27dp"
					android:layout_height="27dp" />

				<ImageView android:id="@+id/star_3"
					android:src="@drawable/star_3"
					android:contentDescription="star_3"
					 android:layout_marginStart="271dp"
					android:layout_marginTop="727dp"
					android:layout_width="27dp"
					android:layout_height="27dp" />

				<TextView android:id="@+id/quest_2"
					android:fontFamily="Nunito"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="36sp"
					android:shadowRadius="4"
					android:shadowColor="#000000"
					android:shadowDx="0"
					android:shadowDy="4"
					android:textColor="@color/score__20_color"
					android:layout_marginLeft="113dp"
					android:layout_marginTop="551dp"
					android:layout_width="175dp"
					android:layout_height="50dp"
					android:text="@string/quest_2_string"
					 />

				<TextView android:id="@+id/quest_3"
					android:fontFamily="Nunito"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="36sp"
					android:shadowRadius="4"
					android:shadowColor="#000000"
					android:shadowDx="0"
					android:shadowDy="4"
					android:textColor="@color/score__20_color"
					android:layout_marginLeft="99dp"
					android:layout_marginTop="718dp"
					android:layout_width="203dp"
					android:layout_height="71dp"
					android:text="@string/quest_3_string"
					 />

				<TextView android:id="@+id/score__25"
					android:fontFamily="Nunito"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/score__20_color"
					android:layout_marginLeft="158dp"
					android:layout_marginTop="448dp"
					android:layout_width="81dp"
					android:layout_height="33dp"
					android:text="@string/score__25_string"
					 />

				<TextView android:id="@+id/score__0"
					android:fontFamily="Nunito"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="16sp"
					android:textColor="@color/score__20_color"
					android:layout_marginLeft="163dp"
					android:layout_marginTop="784dp"
					android:layout_width="72dp"
					android:layout_height="33dp"
					android:text="@string/score__0_string"
					 />

			</RelativeLayout>
		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>